--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,9 @@ local-attention
 boto3
 dataplane
 fast-unzip
+
+# API dependencies
+fastapi==0.111.0
+fastapi-cli==0.0.4
+uvicorn==0.30.1
+uvicorn-worker==0.2.0
